# gitstatusd-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  gitstatusd.txt  gs.sh
src/: lib.rs
