[package]
name = "gitstatusd"
version = "0.2.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


license = "ISC"
description = "Bindings to gitstatusd"
[dependencies]

[dev-dependencies]
pretty_assertions = "0.6.1"

