[package]
name = "gitstatusd"
version = "0.2.1"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"
repository = "https://github.com/aDotInTheVoid/gitstatusd-rs"
homepage = "https://github.com/aDotInTheVoid/gitstatusd-rs"


license = "ISC"
description = "Bindings to gitstatusd"
[dependencies]

[dev-dependencies]
pretty_assertions = "0.6.1"

